appId: iit.nstu.bdstocktrend.stg
---
- tapOn: "DON'T HAVE AN ACCOUNT?"
- tapOn: "johndoe@gmail.com"
- inputText: "eve.holt@reqres.in"
- tapOn: "password\n••••••••••••"
- inputText: "pistol"
- tapOn:
    point: "50%,38%"
- tapOn: "repeat_password\n••••••••••••"
- inputText: "pistol"
- tapOn:
    point: "50%,38%"
- tapOn: "REGISTER"
